Fix HTML encoding issues in services.html

--- a/services.html
+++ b/services.html
@@ -20,7 +20,7 @@
 
         <div class="right-header">
             <div class="contact">
-                <a href="tel:+97450432820" style="color: #378e9d;">
+                <a href="tel:+97450432820">
                     <i class="fa-solid fa-phone"></i>
                 </a>
             </div>
@@ -167,4 +167,5 @@
         </div>
     </footer>
 </body>
+
 </html>
