--- a/doctors.html
+++ b/doctors.html
@@ -20,7 +20,7 @@
 
         <div class="right-header">
             <div class="contact">
-                <a href="tel:+97450432820" style="color: #378e9d;">
+                <a href="tel:+97450432820">
                     <i class="fa-solid fa-phone"></i>
                 </a>
             </div>
@@ -132,4 +132,5 @@
     </footer>
 
 </body>
+
 </html>
